CHANGES IN VERSION 1.2.40
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Now you can include q values from mutsig (or any q-values) as a side barplot in oncoplot

NON SIGNIFICANT CHANGES
    o mafCompare output includes adjusted p-values
    o trinucleotideMatrix output includes adjusted p-values
    o added plot arguments to control title size and point size in lollipopPlot
    o minor bug fixes in plotGisticResults

CHANGES IN VERSION 1.2.30
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT
    o APOBEC enrichment - trinucleotideMatrix function now calculates APOBEC enrichment scores in parallel. See details for more.
    o APOBEC plot - plotSignatures function now plots APOBEC enrichment plot using output from trinucleotideMatrix
    o Survival improvements - mafSurvival can perform survival analysis based on sample grouping
    o GISTIC plot improvements - plotGisticResults can plot genomic segment plot using scores.gistic file

NON SIGNIFICANT CHANGES
    o Auto detects protein_change columns for functions requiring amino acid change information.
    o Added colCode and labelSize arguments to plotOncodrive.
    o Bug fixes and improvements.


CHANGES IN VERSION 1.2.0
-------------------------
NEW FUNCTIONS
    o mafSurvival - Performs survival analysis.
    o tcgaCompare - Compares mutation load from given MAF against all 33 TCGA cohorts.
    o pancanComparision - Perform PacCancer analysis/comparision
    o prepareMutSig - Prepares MAF file for MutSig analysis by fixing descrepencies in gene symbols.

SIGNIFICANT USER-LEVEL IMPROVEMENT
    o plotmafSummary has argument titvRaw. You can set it to FALSE to plot TiTV fraction instead of raw counts.

NON SIGNIFICANT CHANGES
    o Bug fixes and improvements.

CHANGES IN VERSION 1.0.55
-------------------------
    o LollipopPlot axis improvements

CHANGES IN VERSION 1.0.50
-------------------------
SIGNIFICANT USER-LEVEL IMPROVEMENT