@@ -13,6 +13,7 @@ export(lollipopPlot)
 export(mafCompare)
 export(mafSurvival)
 export(math.score)
+export(mutCountMatrix)
 export(mutExclusive)
 export(oncodrive)
 export(oncoplot)
