@@ -28,7 +28,7 @@ prepareMutSig = function(maf, fn = NULL){
 
   #in case user read maf without removing silent variants, remove theme here.
   silent = c("3'UTR", "5'UTR", "3'Flank", "Targeted_Region", "Silent", "Intron",
-             "RNA", "IGR", "Splice_Region", "5'Flank", "lincRNA")
+             "RNA", "IGR", "Splice_Region", "5'Flank", "lincRNA", "De_novo_Start_InFrame", "De_novo_Start_OutOfFrame", "Start_Codon_Ins", "Start_Codon_SNP", "Stop_Codon_Del")
 
   mut = mut[!Variant_Classification %in% silent]
 
